Add Welcome - speak & link

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet"href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  
+ <section class="welcome-section">
+   <h1 class="welcome-section-heading",>Welcome To The Beach</h1>
+   <p class="welcome-section-content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sit illum quidem ab, repudiandae fuga ipsum at dolore amet in.</p>
+   <span class="span"><a href="#main-content" class="welcome-section-link">Read More</a></span> 
+    </section>
+ </section>
+
 </body>
 </html>
