Сut text and put three dots

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
  <section class="welcome-section">
-   <h1 class="welcome-section-heading",>Welcome To The Beach</h1>
-   <p class="welcome-section-content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sit illum quidem ab, repudiandae fuga ipsum at dolore amet in.</p>
+   <h1 class="welcome-section-heading format-text",>welcome To The Beach</h1>
+   <p class="welcome-section-content format-text"> lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sit illum quidem ab, repudiandae fuga ipsum at dolore amet in.</p>
    <span class="span"><a href="#main-content" class="welcome-section-link">Read More</a></span> 
     </section>
  </section>
